# ckanext-datastore-search

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: pyright.yml
ckanext/datastore_search/: cli.py  config_declaration.yaml  interfaces.py  plugin.py  utils.py
ckanext/datastore_search/backend/: __init__.py  solr.py
ckanext/datastore_search/config/redis/: setup.cfg
ckanext/datastore_search/config/redis/create_solr_core/: __init__.py  proc.py
ckanext/datastore_search/config/solr/: managed-schema.xml
ckanext/datastore_search/logic/: action.py
ckanext/datastore_search_plus/: plugin.py
ckanext/datastore_search_solr/: plugin.py
ckanext/datastore_search_solr/backend/: solr.py
