[metadata]
name = ckanext-datastore-search
version = 0.0.1
description = CKAN plugin to create search indices for DataStore resources.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JVickery-TBS/ckanext-datastore-search
author = Jesse Vickery
author_email = jesse.vickery@tbs-sct.gc.ca
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN Datastore SOLR search index indices

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             datastore_search = ckanext.datastore_search.plugin:DataStoreSearchPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/datastore_search/i18n/ckanext-datastore-search.pot
width = 80

[init_catalog]
domain = ckanext-datastore-search
input_file = ckanext/datastore_search/i18n/ckanext-datastore-search.pot
output_dir = ckanext/datastore_search/i18n

[update_catalog]
domain = ckanext-datastore-search
input_file = ckanext/datastore_search/i18n/ckanext-datastore-search.pot
output_dir = ckanext/datastore_search/i18n
previous = true

[compile_catalog]
domain = ckanext-datastore-search
directory = ckanext/datastore_search/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
