[metadata]
name = create_solr_core
version = 0.0.1
description = Python module to create SOLR cores.
url = https://github.com/JVickery-TBS/ckanext-datastore-search
author = Jesse Vickery
author_email = jesse.vickery@tbs-sct.gc.ca
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN Datastore SOLR search index indices

[options]
packages = find_namespace:
package_dir =
  =create_solr_core
install_requires =
include_package_data = True

[options.packages.find]
where=create_solr_core
